# JWPlaceholderAPI

./: LICENSE  README.md  manifest.json  pyproject.toml
src/endstone_jwplaceholderapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jwplaceholderapi/: __init__.py  expansion.py  main.py
src/jwplaceholderapi/builtin/: player_expansion.py  server_expansion.py
src/placeholder_api/: __init__.py  main.py  replacer.py
src/placeholder_api/builtin/: player_expansion.py  server_expansion.py
