[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-placeholderapi"
version = "1.0.0"
description = "Unified placeholder framework for Endstone plugins (Python version)."
readme = "README.md"
license = "MIT"
authors = [{ name = "harryitz" }]
requires-python = ">=3.12"
dependencies = ["endstone>=0.11.3"]

[project.entry-points."endstone"]
placeholder_api = "placeholder_api.main:PlaceholderAPIPlugin"

[tool.setuptools.packages.find]
where = ["src"]
